fixed z-index order

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -369,7 +369,7 @@ a {
 	right: 0;
 	margin: 2rem;
 	padding: 1rem;
-	z-index: 100;
+	z-index: 50;
 	font-size: 1.5rem;
 	transform: scale(0);
 
@@ -651,7 +651,7 @@ a {
 	.project-image {
 		cursor: pointer;
 		position: relative;
-		z-index: -1;
+		z-index: 1;
 
 		&:hover {
 			.project-description {
